test/classes/vass/ref-like-intents/out-subclass.good
out-subclass.chpl:14: error: unresolved call 'procOutC(D)'
out-subclass.chpl:6: note: candidates are: procOutC(out arg: C)
